# chess-blunder-trainer

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  THIRD_PARTY_LICENSES.md  alembic.ini  docker-compose.yml  eslint.config.js  main.py  package-lock.json  package.json  prek.toml  pyproject.toml  setup.cfg  stylelint.config.js
.beads/: metadata.json
.github/: FUNDING.yml
.github/workflows/: docker.yml  test.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_tactical_pattern.py  003_add_difficulty.py  004_add_missed_mate_depth_and_cap_cp_loss.py  005_add_trap_matches.py  006_add_game_type_column.py  007_add_starred_puzzles.py  008_tracked_profiles.py  009_stats_sync_settings.py  010_drop_legacy_username_keys.py
blunder_tutor/: __main__.py  constants.py  features.py  index.py  migrations.py  secure_fs.py  storage.py  trainer.py  uow.py
blunder_tutor/analysis/: db.py  eco.py  engine_pool.py  filtering.py  logic.py  phase.py  tactics.py  thresholds.py  traps.py
blunder_tutor/auth/: __init__.py  db.py  hashers.py  invite.py  middleware.py  policies.py  protocols.py  repository.py  schema.py  service.py  storage_memory.py  storage_sqlite.py  types.py
blunder_tutor/background/: __init__.py  base.py  executor.py  jobs.py  registry.py  runners.py  scheduler.py
blunder_tutor/cache/: __init__.py  backend.py  config.py  decorator.py  invalidation.py  scope.py
blunder_tutor/cli/: analyze.py  analyze_bulk.py  auth.py  backfill_eco.py  backfill_phases.py  base.py  fetch.py  index.py  list.py  main.py  show.py  train_ui.py
blunder_tutor/core/: dependencies.py
blunder_tutor/events/: __init__.py  coalescing.py  event_bus.py  event_types.py  websocket_manager.py
blunder_tutor/fetchers/: __init__.py  _modes.py  _state.py  chesscom.py  filesystem.py  lichess.py  resilience.py  validation.py
blunder_tutor/i18n/: __init__.py  manager.py
blunder_tutor/observability/: __init__.py  config.py  metrics.py  scrubbing.py  sentry_init.py  tracing.py
blunder_tutor/repositories/: __init__.py  analysis.py  base.py  data_management.py  game_repository.py  job_repository.py  profile.py  profile_demo.py  profile_types.py  puzzle_attempt_repository.py  settings.py  starred_puzzle_repository.py  stats_repository.py  trap_repository.py
blunder_tutor/scripts/: download_missing_pieces.py  download_piece_sets.py  download_pieces.py  migrate_index_to_sqlite.py
blunder_tutor/services/: analysis_service.py  eco_backfill_service.py  job_service.py  phase_backfill_service.py  puzzle_service.py  rating_history.py  trap_backfill_service.py
blunder_tutor/utils/: __init__.py  accuracy.py  chess_utils.py  date_utils.py  env.py  explanation.py  pgn_headers.py  pgn_utils.py  time.py  time_control.py
blunder_tutor/web/: app.py  app_lifecycle.py  auth_hooks.py  bypass_auth.py  config.py  cookies.py  dependencies.py  middleware.py  paths.py  per_user_cache.py  request_helpers.py  resources.py  routes.py  settings_snapshot.py  template_context.py  throttle.py  tls.py  vite.py
docs/: AUTH.md  DOCKER.md  GLOSSARY.md  environment.md
e2e/: .gitignore  auth.global-setup.ts  eslint.config.ts  fake-stockfish.sh  global.d.ts  package-lock.json  package.json  playwright.auth.config.ts  playwright.config.ts  playwright.setup-import.config.ts  setup-import.global-setup.ts  tsconfig.json
e2e/fixtures/: app.fixture.ts  known-puzzles.ts
e2e/helpers/: api.ts  db.ts
e2e/pages/: base.page.ts  dashboard.page.ts  game-review.page.ts  import.page.ts  management.page.ts  profiles.page.ts  settings.page.ts  setup.page.ts  trainer.page.ts
e2e/tests/: auth.spec.ts  dashboard.spec.ts  game-review-engine.spec.ts  import.spec.ts  navigation.spec.ts  profiles.spec.ts  settings.spec.ts  setup-and-import.spec.ts  setup.spec.ts  trainer-click.spec.ts  trainer-filters.spec.ts  trainer-solve.spec.ts  trainer-vim.spec.ts
fixtures/: eco.tsv  traps.json
frontend/: eslint.config.ts  tsconfig.eslint.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: vendor.d.ts
frontend/tests/: api.test.ts  color-utils.test.ts  debounce.test.ts  (+9 more)
landing/: index.html  script.js  style.css
locales/: be.json  en.json  es.json  pl.json  ru.json  uk.json  zh.json
scripts/: bootstrap_auth_db.py  create_demo_db.py  download_benchmark_games.py  lint_i18n.py  profile_bulk_analysis.py
templates/: _auth_card.html  _demo_banner.html  _jobs_partial.html  _nav.html  _stats_partial.html  base.html  dashboard.html  first_setup.html  game_review.html  import.html  login.html  management.html  profiles.html  settings.html  setup.html  signup.html  signup_full.html  starred.html  trainer.html  traps.html
tests/: __init__.py  conftest.py  test_accuracy.py  test_analysis_db.py  test_analysis_repository.py  test_app_lifecycle_supervise.py  test_board_settings_api.py  test_bypass_auth.py  test_chess_utils.py  test_coalescing_broadcaster.py  test_collapse_point.py  test_conversion_resilience.py  test_csrf.py  test_dashboard_filters.py  test_date_utils.py  test_debug_api.py  test_demo_mode.py  test_dependency_context.py  test_difficulty.py  test_eco.py  test_elo_rating_emission.py  test_engine_pool.py  test_event_bus.py  test_explanation.py  test_feature_flags.py  test_features.py  test_fetchers.py  test_filtering.py  test_game_repository.py  test_game_review_api.py  test_growth_metrics.py  test_heatmap_api.py  test_i18n.py  test_import.py  test_index.py  test_integration_analysis.py  test_mate_severity.py  test_none_mode_db_path_isolation.py  test_observability_boundaries.py  test_observability_engine_instrumentation.py  (+39 more)
tests_fe/: test_api.js  test_color_utils.js  test_dashboard_renderers.js  test_date_filters.js  test_debounce.js  test_eval_bar.js  test_event_bus.js  test_features.js  test_filter_persistence.js  test_heatmap.js  test_highlights.js  test_i18n.js  test_job_card.js  test_keyboard_shortcuts.js  test_opening_group.js  test_progress_tracker.js  test_theme_loader.js  test_threats.js  test_trainer_state.js  test_vim_input.js  test_websocket_client.js
(+466 files in other folders)
